kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parladata-deployment
  labels:
    app: parladata
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parladata
  template:
    metadata:
      labels:
        app: parladata
    spec:
      containers:
        - name: parladata
          image: parladata
          command:
            - gunicorn
            - parladata_project.wsgi:application
            - -b
            - 0.0.0.0:8000
            - --log-level
            - DEBUG
            - --workers
            - "1"
            - --threads
            - "3"
            - --timeout
            - "120"
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: 200Mi
              cpu: 200m
            limits:
              memory: 200Mi
              cpu: 200m
