kustomize/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: parladata
  labels:
    app: parladata
spec:
  serviceName: parladata
  replicas: 1
  selector:
    matchLabels:
      app: parladata
  template:
    metadata:
      labels:
        app: parladata
    spec:
      containers:
        - name: parladata
          image: parladata # kustomize thing
          volumeMounts:
          - name: parladata-persistent-storage
            mountPath: /pvc
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 5
          command:
            - gunicorn
            - parladata_project.wsgi:application
            - -b
            - 0.0.0.0:8000
            - --log-level
            - DEBUG
            - --workers
            - "1"
            - --threads
            - "3"
            - --timeout
            - "120"
        - name: parladata-nginx
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          image: nginx:alpine
          volumeMounts:
            - name: parladata-persistent-storage
              mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata:
      name: parladata-persistent-storage
    spec:
      storageClassName: 'scw-bssd-retain'
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 2Gi
