kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parladata
spec:
  selector:
    app: parladata
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
