kustomize/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parlasearch
  labels:
    app: parlasearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parlasearch
  template:
    metadata:
      labels:
        app: parlasearch
    spec:
      containers:
      - name: parlasearch
        image: parlasearch # kustomize thing
        ports:
        - name: http
          containerPort: 7003
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 15
          periodSeconds: 30
          timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: parlasearch
spec:
  selector:
    app: parlasearch
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7003
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parlasearch
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  tls:
  - hosts:
    - parlasearch.lb.djnd.si
    secretName: parlasearch-tls
  rules:
  - host: parlasearch.lb.djnd.si
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: parlasearch
            port:
              number: 80
