kustomize/solr.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: parlasolr
  labels:
    app: parlasolr
spec:
  serviceName: parlasolr
  replicas: 1
  selector:
    matchLabels:
      app: parlasolr
  template:
    metadata:
      labels:
        app: parlasolr
    spec:
      securityContext:
        fsGroup: 8983
      containers:
      - name: parlasolr
        image: parlasolr # kustomize thing
        resources:
          requests:
            memory: "1Gi"
            cpu: "1000m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
        volumeMounts:
        - name: parlasolr-persistent-storage
          mountPath: /opt/solr/server/solr/mycores
        ports:
        - name: http
          containerPort: 8983
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /solr/parlasearch/admin/ping
            port: http
          initialDelaySeconds: 15
          periodSeconds: 30
          timeoutSeconds: 5
  volumeClaimTemplates:
  - metadata:
      name: parlasolr-persistent-storage
      annotations:
          pv.beta.kubernetes.io/gid: "8983"
    spec:
      storageClassName: 'scw-bssd-retain'
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: parlasolr
spec:
  selector:
    app: parlasolr
  ports:
    - protocol: TCP
      port: 8983
      targetPort: 8983
---
# This here ingress is for debugging purposes
# only. Make sure it's always commented out.
# Your SOLR instance should not accessible
# from the public internet.
# If you do uncomment this, make sure you set
# the nginx.ingress.kubernetes.io/whitelist-source-range
# annotation.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parlasolr
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/whitelist-source-range: 91.236.1.209/32
spec:
  tls:
    - hosts:
        - bosna.parlasolr.lb.djnd.si
      secretName: bosna-parlasolr-tls
  rules:
  - host: bosna.parlasolr.lb.djnd.si
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: parlasolr
            port:
              number: 8983
